--- a/formulario.css
+++ b/formulario.css
@@ -13,12 +13,21 @@ div {
     background-color: aliceblue;
 }
 label{
+    margin-bottom: 5px;
     display: inline-block;
 }
 input {
+    margin-bottom: 5px;
     width: 60%;
     display: inline-block;
 }
 #manana, #tarde {
     width: 10%;
+}
+#privacidad {
+    width: 40%;
+}
+#boton {
+    display: inline-block;
+    width: 49%;
 }
